--- a/Blood Bank Management System/Blood Bank Management System.csproj
+++ b/Blood Bank Management System/Blood Bank Management System.csproj
@@ -47,100 +47,111 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddUser.cs">
+    <Compile Include="DAL\AccountDAO.cs" />
+    <Compile Include="DAL\BloodDAO.cs" />
+    <Compile Include="DAL\DonateDAO.cs" />
+    <Compile Include="DAL\DonorDAO.cs" />
+    <Compile Include="DAL\PatientDAO.cs" />
+    <Compile Include="DAL\TransferDAO.cs" />
+    <Compile Include="DTL\Donate.cs" />
+    <Compile Include="DTL\Donor.cs" />
+    <Compile Include="DTL\Patient.cs" />
+    <Compile Include="DTL\Transfer.cs" />
+    <Compile Include="DTL\Account.cs" />
+    <Compile Include="GUI\Account.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddUser.Designer.cs">
-      <DependentUpon>AddUser.cs</DependentUpon>
+    <Compile Include="GUI\Account.Designer.cs">
+      <DependentUpon>Account.cs</DependentUpon>
     </Compile>
-    <Compile Include="BloodStock.cs">
+    <Compile Include="GUI\BloodStock.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="BloodStock.Designer.cs">
+    <Compile Include="GUI\BloodStock.Designer.cs">
       <DependentUpon>BloodStock.cs</DependentUpon>
     </Compile>
-    <Compile Include="BloodTransfert.cs">
+    <Compile Include="GUI\BloodTransfert.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="BloodTransfert.Designer.cs">
+    <Compile Include="GUI\BloodTransfert.Designer.cs">
       <DependentUpon>BloodTransfert.cs</DependentUpon>
     </Compile>
     <Compile Include="DAL\DAO.cs" />
-    <Compile Include="Dashboard.cs">
+    <Compile Include="GUI\HistoryTransfer.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Dashboard.Designer.cs">
-      <DependentUpon>Dashboard.cs</DependentUpon>
+    <Compile Include="GUI\HistoryTransfer.Designer.cs">
+      <DependentUpon>HistoryTransfer.cs</DependentUpon>
     </Compile>
-    <Compile Include="DonateBlood.cs">
+    <Compile Include="GUI\DonateBlood.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DonateBlood.Designer.cs">
+    <Compile Include="GUI\DonateBlood.Designer.cs">
       <DependentUpon>DonateBlood.cs</DependentUpon>
     </Compile>
-    <Compile Include="Donor.cs">
+    <Compile Include="GUI\Donor.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Donor.Designer.cs">
+    <Compile Include="GUI\Donor.Designer.cs">
       <DependentUpon>Donor.cs</DependentUpon>
     </Compile>
-    <Compile Include="Login.cs">
+    <Compile Include="GUI\Login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Login.Designer.cs">
+    <Compile Include="GUI\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="Mainform.cs">
+    <Compile Include="GUI\Mainform.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Mainform.Designer.cs">
+    <Compile Include="GUI\Mainform.Designer.cs">
       <DependentUpon>Mainform.cs</DependentUpon>
     </Compile>
-    <Compile Include="Patient.cs">
+    <Compile Include="GUI\Patient.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Patient.Designer.cs">
+    <Compile Include="GUI\Patient.Designer.cs">
       <DependentUpon>Patient.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewDonor.cs">
+    <Compile Include="GUI\ViewDonor.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ViewDonor.Designer.cs">
+    <Compile Include="GUI\ViewDonor.Designer.cs">
       <DependentUpon>ViewDonor.cs</DependentUpon>
     </Compile>
-    <Compile Include="ViewPatients.cs">
+    <Compile Include="GUI\ViewPatients.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ViewPatients.Designer.cs">
+    <Compile Include="GUI\ViewPatients.Designer.cs">
       <DependentUpon>ViewPatients.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="AddUser.resx">
-      <DependentUpon>AddUser.cs</DependentUpon>
+    <EmbeddedResource Include="GUI\Account.resx">
+      <DependentUpon>Account.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="BloodStock.resx">
+    <EmbeddedResource Include="GUI\BloodStock.resx">
       <DependentUpon>BloodStock.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="BloodTransfert.resx">
+    <EmbeddedResource Include="GUI\BloodTransfert.resx">
       <DependentUpon>BloodTransfert.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Dashboard.resx">
-      <DependentUpon>Dashboard.cs</DependentUpon>
+    <EmbeddedResource Include="GUI\HistoryTransfer.resx">
+      <DependentUpon>HistoryTransfer.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DonateBlood.resx">
+    <EmbeddedResource Include="GUI\DonateBlood.resx">
       <DependentUpon>DonateBlood.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Donor.resx">
+    <EmbeddedResource Include="GUI\Donor.resx">
       <DependentUpon>Donor.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Login.resx">
+    <EmbeddedResource Include="GUI\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Mainform.resx">
+    <EmbeddedResource Include="GUI\Mainform.resx">
       <DependentUpon>Mainform.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Patient.resx">
+    <EmbeddedResource Include="GUI\Patient.resx">
       <DependentUpon>Patient.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -152,10 +163,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ViewDonor.resx">
+    <EmbeddedResource Include="GUI\ViewDonor.resx">
       <DependentUpon>ViewDonor.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ViewPatients.resx">
+    <EmbeddedResource Include="GUI\ViewPatients.resx">
       <DependentUpon>ViewPatients.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
